# loggro-ai-challenge

./: .env.example  .gitignore  BACKLOG.md  CLAUDE.md  LICENSE  Makefile  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug.md  pregunta.md
.github/workflows/: eval.yml
data/track-a-outbound/: BRIEF.md  ICP.md  README.md  accounts.json  responses_sample.json
data/track-b-insights/: BRIEF.md  README.md  campaigns.json  transcripts.json
data/track-b-insights/ga_reports/: report-acquisition.csv  report-audience.csv  report-conversion.csv  report-events.csv  report-pages.csv
data/track-c-pieces/: BRIEF.md  README.md  bad_pieces.json  briefs.json  good_pieces.json
data/track-d-intel/: BRIEF.md  README.md  speaker_map.json
docs/: ADR_template.md  AI_AUDIT_LOG_template.md  AI_STACK_template.md  BRAND_VOICE.md  PREMORTEM_template.md  README.md
docs/audio-scripts/: 01-demo-contadora.md  02-demo-cfo.md  03-negociacion.md  04-edge-consent-denied.md  05-followup-won.md  06-hospitalidad.md  07-nomina.md  08-deal-estancado.md  09-referido.md  README.md
docs/sessions/: README.md
eval/: README.md  eval.py  judge_prompt.md
eval/held_out/: README.md
legal/: README.md  consentimiento_grabacion.md  propiedad_intelectual.md
prompts/: README.md
schemas/: README.md  hubspot_mock.json  insights_schema.json
