[project]
name = "loggro-ai-challenge"
version = "0.1.0"
description = "Template del reto tecnico VE-1770 de Loggro: Especialista en Automatizacion, IA y Growth"
requires-python = ">=3.11"
authors = [{name = "Loggro S.A.S"}]
license = {text = "MIT"}
dependencies = [
    "litellm>=1.50",
    "pydantic>=2.7",
    "python-dotenv>=1.0",
    "jsonschema>=4.21",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "ruff>=0.6",
]
audio = [
    "openai-whisper",
    "deepgram-sdk",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM"]
ignore = ["E501"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = []
